Database can now be seeded

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li onclick="location.href='/'">Home</li>
+            <li>Dasboard</li>
+            <li>Login</li>
+            <li>Logout</li>
+        </ul>
+    </nav>
     {{{body}}}
 </body>
 </html>
