Post showing on homepage now

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,7 +2,7 @@
 
 {{#each post}}
 <div>
-<p>{{this.post}}</p>
-<p>by, {{this.username}}</p>
+<p>{{this.postTitle}}</p>
+<p>by, {{user.username}}</p>
 </div>
 {{/each}}
