--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,8 +12,8 @@
     <nav>
         <ul>
             <li onclick="location.href='/'">Home</li>
-            <li onclick="location.href='/'">Dasboard</li>
             {{#if logged_in}}
+            <li onclick="location.href='/'">Dashboard</li>
             <li id="logout">Logout</li>
             {{else}}
             <li onclick="location.href='/login'">Login</li>
